--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,23 +47,23 @@ jobs:
       - name: Run TFlint
         id: tflint
         run: tflint --init && tflint -f compact
-        working-directory: ./
+        working-directory: ./terraform
 
       # Terraform Steps
       - name: Initialize Terraform
         id: init
         run: terraform init -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" -backend-config="key=terraform.tfstate" -backend-config="region=${{ secrets.AWS_REGION }}"
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Validate Terraform
         id: validate
         run: terraform validate
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Generate Terraform Plan
         id: plan
         run: terraform plan -lock=false > plan.txt
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Create Plan Output Text File
         id: plan_report
@@ -74,7 +74,7 @@ jobs:
           echo "" >> reports/report.txt
           echo "## Terraform Plan Output" >> reports/report.txt
           cat plan.txt >> reports/report.txt
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Commit and push the report
         run: |
@@ -85,7 +85,7 @@ jobs:
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./
+        working-directory: ./terraform
 
       # Checkov Integration
       - name: Install Checkov
@@ -96,7 +96,7 @@ jobs:
       - name: Run Checkov
         id: checkov
         run: checkov -d . --framework terraform --soft-fail
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Comment Plan to Pull Request
         uses: actions/github-script@v7
@@ -118,7 +118,7 @@ jobs:
       - name: Apply Terraform
         id: apply
         run: terraform apply -auto-approve -lock=false -no-color
-        working-directory: ./
+        working-directory: ./terraform
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
       - name: Get EKS Cluster Name from Output
@@ -129,7 +129,7 @@ jobs:
           CLUSTER_NAME=$(terraform output -raw cluster_name)
           echo "Cluster name: $CLUSTER_NAME"
           echo "cluster_name=${CLUSTER_NAME}" >> $GITHUB_OUTPUT
-        working-directory: ./
+        working-directory: ./terraform
 
       - name: Set up kubectl
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
