--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -121,17 +121,6 @@ jobs:
         working-directory: ./terraform
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
-      - name: Get EKS Cluster Name from Output
-        id: get_eks_cluster_name
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          echo "Retrieving EKS cluster name..."
-          cd terraform
-          CLUSTER_NAME=$(terraform output -raw cluster_name)
-          echo "Cluster name: $CLUSTER_NAME"
-          echo "cluster_name=${CLUSTER_NAME}" >> $GITHUB_OUTPUT
-        working-directory: ./terraform
-
       - name: Set up kubectl
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: Azure/setup-kubectl@v4.0.0
@@ -141,7 +130,7 @@ jobs:
       - name: Update kubeconfig
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          aws eks update-kubeconfig --name "${{ steps.get_eks_cluster_name.outputs.cluster_name }}" --region "${{ secrets.AWS_REGION }}" --kubeconfig ~/.kube/config
+          aws eks update-kubeconfig --name health-eks-cluster --region "${{ secrets.AWS_REGION }}"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
