--- a/k8s/service-account.yml
+++ b/k8s/service-account.yml
@@ -4,3 +4,13 @@ metadata:
   name: ecr-puller
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::154767946691:role/health-eks-cluster-ecr-sa-role
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: aws-load-balancer-controller
+  namespace: kube-system
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::154767946691:instance-profile/eks-ingress
