--- a/k8s/patient-service.yml
+++ b/k8s/patient-service.yml
@@ -7,6 +7,6 @@ spec:
     app: patient-app
   ports:
     - protocol: TCP
-      port: 3000
+      port: 80
       targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
